--- a/.env.production
+++ b/.env.production
@@ -5,4 +5,4 @@ VUE_APP_TITLE = 账房管理系统
 ENV = 'production'
 
 # 账房管理系统/生产环境
-VUE_APP_BASE_API = 'http://searchaccount.kk88815.net/prod-api'
+VUE_APP_BASE_API = 'http://searchaccount.kk88815.net'
